--- a/Evaluación2_20216893.ipynb
+++ b/Evaluación2_20216893.ipynb
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12557fe9",
+   "id": "1ed24a9c",
    "metadata": {},
    "source": [
     "## (Re) Projecting\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c3bea726",
+   "id": "fc2c5d41",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b2df246e",
+   "id": "bb06fd8d",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f42ec867",
+   "id": "8bcdacaf",
    "metadata": {},
    "source": [
     "A projected CRS will have units in meters or feet (or similar). The CRS per country can be found here: https://epsg.io"
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1b17dd84",
+   "id": "86fbaac6",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4a84dc7c",
+   "id": "aa129cbb",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2aec019f",
+   "id": "636ca57b",
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c22db279",
+   "id": "add7e8a7",
    "metadata": {},
    "source": [
     "Not using the right projection will give you a wrong numerical result when needing numerical accuracy; however, you might find situation where the visual output seems right (yet it is wrong). Then, Let's keep the projected version for all our maps:"
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "099f7c9b",
+   "id": "3c15fa65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e11d80ab",
+   "id": "585034cb",
    "metadata": {},
    "source": [
     "The plot again: "
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f3461434",
+   "id": "4263dce2",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a78fb7f4",
+   "id": "04f0894a",
    "metadata": {},
    "source": [
     "## Exporting maps\n",
@@ -1087,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "935c2818",
+   "id": "4ba39db9",
    "metadata": {},
    "outputs": [
     {
@@ -1109,6 +1109,19 @@
     "map2=cities_3112.plot(marker='+', color='red', markersize=15,ax=base)\n",
     "mapAustralia=rivers_3112.plot(edgecolor='blue', linewidth=0.5,ax=base)\n",
     "plt.savefig(os.path.join(\"figures\",'mapAustralia.jpg'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "159c8fd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving\n",
+    "australia_312.to_file(os.path.join(\"maps\",\"australia_312\",\"australiaMaps_5641.gpkg\"), layer='country', driver=\"GPKG\")\n",
+    "cities_5641.to_file(os.path.join(\"maps\",\"brazil_5641\",\"brazilMaps_5641.gpkg\"), layer='cities', driver=\"GPKG\")\n",
+    "rivers_5641.to_file(os.path.join(\"maps\",\"brazil_5641\",\"brazilMaps_5641.gpkg\"), layer='rivers', driver=\"GPKG\")"
    ]
   }
  ],
