--- a/Evaluación2_20216893.ipynb
+++ b/Evaluación2_20216893.ipynb
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed24a9c",
+   "id": "16d2ec6f",
    "metadata": {},
    "source": [
     "## (Re) Projecting\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fc2c5d41",
+   "id": "a84b5e0e",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bb06fd8d",
+   "id": "4860365a",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bcdacaf",
+   "id": "36898993",
    "metadata": {},
    "source": [
     "A projected CRS will have units in meters or feet (or similar). The CRS per country can be found here: https://epsg.io"
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "86fbaac6",
+   "id": "bf03734c",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "aa129cbb",
+   "id": "5121802b",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "636ca57b",
+   "id": "abaa7ac2",
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add7e8a7",
+   "id": "22793705",
    "metadata": {},
    "source": [
     "Not using the right projection will give you a wrong numerical result when needing numerical accuracy; however, you might find situation where the visual output seems right (yet it is wrong). Then, Let's keep the projected version for all our maps:"
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3c15fa65",
+   "id": "b0921455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "585034cb",
+   "id": "e96625b2",
    "metadata": {},
    "source": [
     "The plot again: "
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4263dce2",
+   "id": "875bb32d",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f0894a",
+   "id": "4d5f5c9f",
    "metadata": {},
    "source": [
     "## Exporting maps\n",
@@ -1087,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4ba39db9",
+   "id": "eda3f1f8",
    "metadata": {},
    "outputs": [
     {
@@ -1113,15 +1113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "159c8fd2",
+   "execution_count": 25,
+   "id": "91671699",
    "metadata": {},
    "outputs": [],
    "source": [
     "# saving\n",
-    "australia_312.to_file(os.path.join(\"maps\",\"australia_312\",\"australiaMaps_5641.gpkg\"), layer='country', driver=\"GPKG\")\n",
-    "cities_5641.to_file(os.path.join(\"maps\",\"brazil_5641\",\"brazilMaps_5641.gpkg\"), layer='cities', driver=\"GPKG\")\n",
-    "rivers_5641.to_file(os.path.join(\"maps\",\"brazil_5641\",\"brazilMaps_5641.gpkg\"), layer='rivers', driver=\"GPKG\")"
+    "australia_3112.to_file(os.path.join(\"maps\",\"australia_3112\",\"australiaMaps_3112.gpkg\"), layer='country', driver=\"GPKG\")\n",
+    "cities_3112.to_file(os.path.join(\"maps\",\"australia_3112\",\"australiaMaps_3112.gpkg\"), layer='cities', driver=\"GPKG\")\n",
+    "rivers_3112.to_file(os.path.join(\"maps\",\"australia_3112\",\"australiaMaps_3112.gpkg\"), layer='rivers', driver=\"GPKG\")"
    ]
   }
  ],
