--- a/Evaluación2_20216893.ipynb
+++ b/Evaluación2_20216893.ipynb
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16d2ec6f",
+   "id": "b043098f",
    "metadata": {},
    "source": [
     "## (Re) Projecting\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a84b5e0e",
+   "id": "50337862",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4860365a",
+   "id": "96575a34",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36898993",
+   "id": "125e553c",
    "metadata": {},
    "source": [
     "A projected CRS will have units in meters or feet (or similar). The CRS per country can be found here: https://epsg.io"
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bf03734c",
+   "id": "4a6a4c7a",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5121802b",
+   "id": "a48fa3cd",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "abaa7ac2",
+   "id": "fa50f3f0",
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22793705",
+   "id": "e50bb1c1",
    "metadata": {},
    "source": [
     "Not using the right projection will give you a wrong numerical result when needing numerical accuracy; however, you might find situation where the visual output seems right (yet it is wrong). Then, Let's keep the projected version for all our maps:"
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b0921455",
+   "id": "c0e45374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e96625b2",
+   "id": "cabec96c",
    "metadata": {},
    "source": [
     "The plot again: "
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "875bb32d",
+   "id": "bd7efcdf",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d5f5c9f",
+   "id": "f2830604",
    "metadata": {},
    "source": [
     "## Exporting maps\n",
@@ -1087,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "eda3f1f8",
+   "id": "50b3b9e5",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "91671699",
+   "id": "57592f9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,6 +1122,110 @@
     "australia_3112.to_file(os.path.join(\"maps\",\"australia_3112\",\"australiaMaps_3112.gpkg\"), layer='country', driver=\"GPKG\")\n",
     "cities_3112.to_file(os.path.join(\"maps\",\"australia_3112\",\"australiaMaps_3112.gpkg\"), layer='cities', driver=\"GPKG\")\n",
     "rivers_3112.to_file(os.path.join(\"maps\",\"australia_3112\",\"australiaMaps_3112.gpkg\"), layer='rivers', driver=\"GPKG\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b226a6",
+   "metadata": {},
+   "source": [
+    "Let's save the link recovered: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "93c0f188",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "australiaMaps_3112='https://github.com/SpatialDataScience23-2/simpleplot/raw/main/maps/australia_3112/australiaMaps_3112.gpkg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f2b1419c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['country', 'cities', 'rivers']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fiona import listlayers\n",
+    "\n",
+    "listlayers(australiaMaps_3112)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33a4571d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Now you are confident what to request:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ce8ce602",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities_3112=gpd.read_file(australiaMaps_3112,layer='cities')\n",
+    "rivers_3112=gpd.read_file(australiaMaps_3112,layer='rivers')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b73bfdd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 1) (2095829315.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[34], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    base = australia_3112.plot(facecolor='gainsboro)\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = australia_3112.plot(facecolor='gainsboro)\n",
+    "cities_3112.plot(ax=base, markersize=0.5, color='red') \n",
+    "rivers_3112.plot(ax=base, linewidth=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4fcccfc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://github.com/SpatialDataScience23-2/simpleplot/raw/main/maps/australia_3112/australiaMaps_3112.gpkg'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "australia_3112"
    ]
   }
  ],
